Minor upgrade message adjustment

--- a/fwup.conf.eex
+++ b/fwup.conf.eex
@@ -127,7 +127,7 @@ task upgrade.old-a {
     require-uboot-variable(uboot-env, "b.nerves_fw_platform", "${NERVES_FW_PLATFORM}")
 
     on-init {
-        info("Upgrading partition A to tryboot layout. Don't interrupt update!")
+        info("Migrating boot partition A to the new tryboot (automatic rollback) layout. Do not power off or interrupt this update.")
 
         # Clear some firmware information just in case this update gets
         # interrupted midway. If this partition was bootable, it's not going to
@@ -192,7 +192,7 @@ task upgrade.old-b {
     require-uboot-variable(uboot-env, "a.nerves_fw_platform", "${NERVES_FW_PLATFORM}")
 
     on-init {
-        info("Upgrading partition B to tryboot layout. Don't interrupt update!")
+        info("Migrating boot partition B to the new tryboot (automatic rollback) layout. Do not power off or interrupt this update.")
 
         # Clear some firmware information just in case this update gets
         # interrupted midway. If this partition was bootable, it's not going to
